// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a default button 1`] = `
<StyledButton
  className="root default"
>
  <span
    className="content"
  >
    Button content
  </span>
</StyledButton>
`;

exports[`<Button /> should render a error button 1`] = `
<StyledButton
  className="root error"
>
  <span
    className="content"
  >
    Button content
  </span>
</StyledButton>
`;

exports[`<Button /> should render a info button 1`] = `
<StyledButton
  className="root info"
>
  <span
    className="content"
  >
    Button content
  </span>
</StyledButton>
`;

exports[`<Button /> should render a primary button 1`] = `
<StyledButton
  className="root primary"
>
  <span
    className="content"
  >
    Button content
  </span>
</StyledButton>
`;

exports[`<Button /> should render a success button 1`] = `
<StyledButton
  className="root success"
>
  <span
    className="content"
  >
    Button content
  </span>
</StyledButton>
`;

exports[`<Button /> should render a warning button 1`] = `
<StyledButton
  className="root warning"
>
  <span
    className="content"
  >
    Button content
  </span>
</StyledButton>
`;
